[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Ishan1819",email = "ishanp141@gmail.com"}
]
readme = "README.md"
requires-python = "3.11.14"
dependencies = [
    "pydantic (==2.11.7)",
    "requests (==2.32.4)",
    "google-auth (>=2.15.0,<2.42.0)",
    "fastapi (>=0.120.4,<0.121.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "aiofiles (>=25.1.0,<26.0.0)",
    "slowapi (>=0.1.9,<0.2.0)",
    "google-cloud-firestore (>=2.21.0,<3.0.0)",
    "google-cloud-bigquery (>=3.38.0,<4.0.0)",
    "google-cloud-storage (>=3.4.1,<4.0.0)",
    "google-cloud-aiplatform (>=1.124.0,<2.0.0)",
    "google-auth-httplib2 (>=0.2.1,<0.3.0)",
    "google-auth-oauthlib (>=1.2.3,<2.0.0)",
    "firebase-admin (>=7.1.0,<8.0.0)",
    "google-cloud-translate (>=3.22.0,<4.0.0)",
    "google-generativeai (>=0.8.5,<0.9.0)",
    "numpy (>=2.3.4,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "scipy (>=1.16.3,<2.0.0)",
    "instagrapi (>=2.2.1,<3.0.0)",
    "cloudinary (>=1.44.1,<2.0.0)",
    "pillow (>=12.0.0,<13.0.0)",
    "gtts (>=2.5.4,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "redis (>=7.0.1,<8.0.0)",
    "hiredis (>=3.3.0,<4.0.0)",
    "reportlab (>=4.4.4,<5.0.0)",
    "twilio (>=9.8.5,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
